--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="">Web<span>Stutio</span></a>
+            <a href="">WebStutio</a>
             <ul>
                 <li><a href="">Студія</a></li>
                 <li><a href="">Портфоліо</a></li>
@@ -48,15 +48,15 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li><a href="">
-                    <img src="/img/1.jpg" alt="друкування" width="370" height="294">
+                    <img src="./img/1.jpg" alt="друкування" width="370" height="294">
                 </a>
             </li>
                 <li><a href="">
-                    <img src="/img/2.jpg" alt="телефон та ноут" width="370" height="294">
+                    <img src="./img/2.jpg" alt="телефон та ноут" width="370" height="294">
                 </a>
             </li>
                 <li><a href="">
-                    <img src="/img/3.jpg" alt="планшет" width="370" height="294">
+                    <img src="./img/3.jpg" alt="планшет" width="370" height="294">
                 </a>
             </li>
             </ul>
@@ -65,22 +65,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li><a href="">
-                    <img src="/img/face1.jpg" alt="член команди" width="270" height="260"></a>
+                    <img src="./img/face1.jpg" alt="член команди" width="270" height="260"></a>
                     <h5>Ігор Дем'яненко</h5>
                     <p>Product Designer</p>
                 </li>
                 <li><a href="">
-                    <img src="/img/fase2.jpg" alt="член команди" width="270" height="260"></a>
+                    <img src="./img/fase2.jpg" alt="член команди" width="270" height="260"></a>
                     <h5>Ольга Рєпіна</h5>
                     <p>Frontend Developer</p>
                 </li>
                 <li><a href="">
-                    <img src="/img/fase3.jpg" alt="член команди" width="270" height="260"></a>
+                    <img src="./img/fase3.jpg" alt="член команди" width="270" height="260"></a>
                     <h5>Микола Тарасов</h5>
                     <p>Marketing</p>
                 </li>
                 <li><a href="">
-                    <img src="/img/fase4.jpg" alt="член команди" width="270" height="260"></a>
+                    <img src="./img/fase4.jpg" alt="член команди" width="270" height="260"></a>
                     <h5>Михайло Єрмаков</h5>
                     <p>UI Designer</p>
                 </li>
