--- a/index.html
+++ b/index.html
@@ -8,54 +8,57 @@
 </head>
 <body>
     <header>
+        <a href="#"><span>WebStutio</span></a>
         <nav>
-            <a href="">WebStutio</a>
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
             <ul>
-                <li><a href="">info@devstudio.com</a></li>
-                <li><a href="">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
     </header>
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button> 
-            <ul>
-                <li>
-                    <h5>УВАГА ДО ДЕТАЛЕЙ</h5>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li>
-                    <h5>ПУНКТУАЛЬНІСТЬ</h5>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li>
-                    <h5>ПЛАНУВАННЯ</h5>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h5>СУЧАСНІ ТЕХНОЛОГІЇ</h5>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
-        </section>
+            <section>
+                <h1>Ефективні рішення для вашого бізнесу</h1>
+                <button type="button">Замовити послугу</button> 
+            </section>
+           <section>
+                <ul>
+                <h2>Наші переваги</h2>
+                    <li>
+                        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    </li>
+                    <li>
+                        <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    </li>
+                    <li>
+                        <h3>ПЛАНУВАННЯ</h3>
+                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </li>
+                    <li>
+                        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    </li>
+                </ul>
+           </section>
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><a href="">
+                <li><a href="#">
                     <img src="./img/1.jpg" alt="друкування" width="370" height="294">
                 </a>
             </li>
-                <li><a href="">
+                <li><a href="#">
                     <img src="./img/2.jpg" alt="телефон та ноут" width="370" height="294">
                 </a>
             </li>
-                <li><a href="">
+                <li><a href="#">
                     <img src="./img/3.jpg" alt="планшет" width="370" height="294">
                 </a>
             </li>
@@ -64,35 +67,37 @@
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><a href="">
+                <li><a href="#">
                     <img src="./img/face1.jpg" alt="член команди" width="270" height="260"></a>
-                    <h5>Ігор Дем'яненко</h5>
+                    <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
-                <li><a href="">
+                <li><a href="#">
                     <img src="./img/fase2.jpg" alt="член команди" width="270" height="260"></a>
-                    <h5>Ольга Рєпіна</h5>
+                    <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li><a href="">
+                <li><a href="#">
                     <img src="./img/fase3.jpg" alt="член команди" width="270" height="260"></a>
-                    <h5>Микола Тарасов</h5>
+                    <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
-                <li><a href="">
+                <li><a href="#">
                     <img src="./img/fase4.jpg" alt="член команди" width="270" height="260"></a>
-                    <h5>Михайло Єрмаков</h5>
+                    <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="">WebStudio</a>
+        <a href="#"><span>WebStudio</span></a>
         <address>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <a href="">info@devstudio.com</a>
-            <a href="">+38 096 111 11 11</a>
+            <ul>
+                <li><a target="_blank" rel="noreferrer noopener" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 </body>
